--- a/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepL Translation Provider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -17,7 +17,7 @@
         WindowStyle="None"
         Width="610"
         MaxWidth="610"
-        MaxHeight="600"
+        Height="700"
         AllowsTransparency="False"
         WindowStartupLocation="CenterScreen"
         Title="{Binding Title}">
@@ -224,6 +224,22 @@
                                          Text="{Binding IgnoreTags, Converter={StaticResource ListToStringConverter}}"
                                          HorizontalAlignment="Right" />
                             </StackPanel>
+
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Style"
+                                       Margin="12 0 0 5" />
+                                <ComboBox Margin="5 0 0 0"
+                                          Height="20"
+                                          SelectedItem="{Binding SelectedStyle}"
+                                          ItemsSource="{Binding Styles}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name}" />
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+
                         </StackPanel>
                         <StackPanel Margin="5 5 0 5">
 
